--- a/childhood-games-pack/Properties/Resources.resx
+++ b/childhood-games-pack/Properties/Resources.resx
@@ -121,6 +121,18 @@
   <data name="heavy_tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\heavy_tank.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="light_ctank_d" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_d.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="light_ctank_l" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_l.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="light_ctank_r" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_r.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="light_ctank_u" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_u.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="light_tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_tank.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
