--- a/childhood-games-pack/Properties/Resources.resx
+++ b/childhood-games-pack/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="_base" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\base.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="light_wall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_wall.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
