--- a/childhood-games-pack/Properties/Resources.resx
+++ b/childhood-games-pack/Properties/Resources.resx
@@ -118,29 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="heavy_tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\heavy_tank.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="light_utank_d" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_utank_d.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="light_ctank_d" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\light_ctank_d.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="light_ctank_l" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\light_ctank_l.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="light_ctank_r" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\light_ctank_r.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="light_ctank_u" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\light_ctank_u.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="medium_tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\medium_tank.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="light_tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_tank.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="light_utank_d" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\light_utank_d.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="light_utank_l" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\light_utank_l.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="light_ctank_u" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_u.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="light_utank_r" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_utank_r.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,13 +136,28 @@
   <data name="light_utank_u" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_utank_u.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="medium_tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tanks\res\medium_tank.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="_base" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\base.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="light_ctank_r" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_r.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="light_wall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_wall.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="light_ctank_d" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_d.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="heavy_tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\heavy_tank.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="light_utank_l" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_utank_l.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="light_ctank_l" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tanks\res\light_ctank_l.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tetris_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\tetris_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
