--- a/childhood-games-pack/Properties/Resources.resx
+++ b/childhood-games-pack/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="light_ctank_u" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_ctank_u.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tetris_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\tetris_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="light_utank_r" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_utank_r.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -157,7 +160,7 @@
   <data name="light_ctank_l" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tanks\res\light_ctank_l.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="tetris_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\tetris_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tennis_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\tennis_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
